app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
    line-height: 1;
    margin: 0;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

audio:focus {
    outline: none;
}

p {
    padding: 0;
    margin: 0;
}


html {
    font-family: 'Roboto', sans-serif;
    // border: 1px solid turquoise;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    
}

body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    // background-color: #F8F8F8;
    // background-image: linear-gradient(to top, #6f757f, 35%, white);
}

.container {
    width: 100%;
    // border: 1px solid purple;
}

h2 {
    font-size: 15px;
    font-weight: 300;
    width: 500px;
    height: 10px;
    align-self: center;
}

textarea:focus, input:focus{
    outline: none;
    background-color: #E7F0FE;
    border-radius: 2px;
}

.logo {
    font-size: 20px;
    align-self: center;
    margin-left: 10px;
    margin-top: 30px;
    // background-image: linear-gradient(45deg, #5E47FD, 55%, #1E9FC4,#1ec4b9);
    
    // background-size: 100%;
    // background-repeat: repeat;
    // font-weight: 500;
    // -webkit-background-clip: text;
    // -webkit-text-fill-color: transparent; 
    // background-clip: text;
    // -moz-background-clip: text;
    // -moz-text-fill-color: transparent;

    // text-align: center;
    background: linear-gradient(45deg, darkgray 5%,black 20%, #584FF8 70%, #347FD7 80%, darkgray 99%);
    background-size: 200% auto;
    
    color: #000;
    background-clip: text;
    // text-fill-color: transparent;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    
    animation: shine 10s linear infinite;
    @keyframes shine {
        to {
        background-position: 200% center;
        }
    }

}

.nav-bar {
    width: 100%;
    margin: 0 auto;
    // position: fixed;
    z-index: 3;
    background-color: white;
    // margin-top: -100px;
    padding-left: 20px;
}

.nav-top {
    display: flex;
    justify-content: space-between;
    width: 1259px;
    
}

.nav-bottom {
    display: flex;
    justify-content: space-between;
    margin-top: 15px;

    .support {
        background-image: linear-gradient(45deg, #5E47FD, 55%, #1E9FC4,#1ec4b9);
        background-size: 100%;
        background-repeat: repeat;
        font-weight: 500;
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent; 
        background-clip: text;
        -moz-background-clip: text;
        -moz-text-fill-color: transparent;
    }
}

.nav-bar-links {
    display: flex;
    width: 1259px;
    // justify-content: flex-end;
}


.auth-links {
    display: flex;
    justify-self: flex-end;
    position: absolute;
    right: 62px;

    .auth-nav {
        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
        background-color: white;
        position: absolute;
        z-index: 2;
        right: 1px;
        top: 30px;
        border-radius: 5px;
        width: 236px;
        padding: 10px;

        p {
            // display: flex;
            img {
                position: absolute;
                right: 10px;
                top: 15px;
                // justify-self: flex-end;
            }

            &:hover {
                text-decoration: none;
                background-color: rgb(236, 236, 236);
            }
        }

        a {
            color: black;
            font-weight: lighter;
            font-size: 18px;
            
        }
    }

}

.auth-links p:hover {
    cursor: pointer;
    text-decoration: underline;
}

.avatar {
    border-radius: 55%;
    background-image: linear-gradient(to right, #5E47FD, 55%, #1E9FC4);
    background-size: 100%;
    background-repeat: repeat;
    width: 30px;
    height: 30px;
    cursor: pointer;
    font-size: 30px;
    color: yellow;
    text-align: center;
}


.announce {
    text-align: center;
    // padding: 5px;
    margin: 0;
    display: flex;
    align-self: center;
    font-size: 17px;
    background-image: linear-gradient(45deg, #5E47FD, 55%, #1E9FC4,#1ec4b9);
    background-size: 92%;
    background-repeat: repeat;
    font-weight: 500;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
    background-clip: text;
    -moz-background-clip: text;
    -moz-text-fill-color: transparent;
}

#main-story {
    // width: 104%;
    margin-left: -10px;
}

p {
    justify-content: flex-end;
    padding: 10px;
    font-size: 16px;
    // margin: 6px;
}

.modal-background {
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: 10;
}

.modal-child {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/* ... */

